assets/css/src/board.css
.public-board {
    margin-top: 5px
}

.public-task {
    max-width: 800px;
    margin: 5px auto 0
}

#board-container {
    overflow-x: auto
}

#board {
    table-layout: fixed;
    margin-bottom: 0
}

#board th.board-column-header {
    width: 240px
}

#board th.board-column-header-first {
    width: 240px;
    visibility:hidden;
    padding: 0px
}

#board td {
    vertical-align: top
}

.board-container-compact {
    overflow-x: initial
}

@media all and (-ms-high-contrast: active),
(-ms-high-contrast: none) {
    .board-container-compact #board {
        table-layout: auto
    }
}

#board th.board-column-header.board-column-compact {
    width: initial
}

#board th.board-column-header-first.board-column-compact {
    width: initial
}

.board-column-collapsed {
    display: none
}

td.board-column-task-collapsed {
    font-weight: bold;
    background-color: #fbfbfb
}

#board th.board-column-header-collapsed {
    width: 28px;
    min-width: 28px;
    text-align: center;
    overflow: hidden
}

#board th.board-column-header-first-collapsed {
    width: 28px;
    min-width: 28px;
    text-align: center;
    overflow: hidden
}

.board-rotation-wrapper {
    position: relative;
    padding: 8px 4px;
    min-height: 150px;
    overflow: hidden
}

.board-rotation {
    white-space: nowrap;
    -webkit-backface-visibility: hidden;
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    -webkit-transform-origin: 0 100%;
    -moz-transform-origin: 0 100%;
    -ms-transform-origin: 0 100%;
    transform-origin: 0 100%
}

.board-column-title .dropdown-menu {
    text-decoration: none
}

.board-add-icon {
    float: left;
    padding: 0 5px
}

.board-add-icon i {
    text-decoration: none;
    color: var(--link-color-primary);
    font-size: 1.4em
}

.board-add-icon i:focus,
.board-add-icon i:hover {
    text-decoration: none;
    color: red
}

.board-column-header-task-count {
    color: var(--color-light);
    font-weight: normal
}

a.board-swimlane-toggle {
    text-decoration: none
}

a.board-swimlane-toggle:hover,
a.board-swimlane-toggle:focus {
    color: #000;
    text-decoration: none;
    border: none
}

.board-task-list {
    min-height: 60px
}

.board-task-list-compact {
    max-height: 90vh;
    overflow-y: auto;
}

.board-task-list .task-board:last-child {
    margin-bottom: 0
}

.board-task-list-limit {
    background-color: var(--board-task-limit-color);
}

.draggable-item {
    cursor: pointer;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none
}

.draggable-placeholder {
    border: 2px dashed #000;
    background: #fafafa;
    height: 70px;
    margin-bottom: 10px
}

div.draggable-item-selected {
    border: 1px solid #000
}

